Thu Jun 24 09:23:46 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDSDataWriterListener_T.h:
        * connectors/dds4ccm/impl/dds/DDSDataWriterListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DDSPublisherListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DDSSubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/dds/Publisher_T.cpp:
          Passing the type datawriter onto the listener.

Thu Jun 24 09:23:25 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_component_mpc.pl:
          Use dynamicflags +=

Thu Jun 24 08:52:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * *.mpc:
          Use dynamicflags +=

Thu Jun 24 08:29:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.cpp:
          Build in extra check for errors.

Thu Jun 24 08:22:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.mpc:
        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.mpc:
          Further cleanup to get this working on windows

        * MPC/config/dds4ccm_ddsonly.mpb:
          Removed this file.

Thu Jun 24 08:03:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.mpc:
        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.mpc:
          Improvements to these files

Thu Jun 24 07:39:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDSDataReaderListener_T.cpp:
          Warnings.

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.h:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp: