@@ -1,3 +1,8 @@
+Thu Jun 24 09:41:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/DomainParticipant_T.cpp:
+          Fuzz
+
 Thu Jun 24 09:23:46 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/dds/DDSDataWriterListener_T.h:
